# MasPhD

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml
data/resources/: tiploc.csv
data/weights/: model_weights.json
notebooks/: 01_test_stomp.ipynb  02_darwin_preview.ipynb  03_darwin_model_prediction.ipynb  04_hsp_get_data.ipynb
scripts/: enrich_hsp_actuals.py  run_realtime_predict.py
src/masphd/: config.py
src/masphd/dao/: __init__.py  actual_arrivals_hsp.py  connections.py  realtime_store.py  schema.py  sqlite.py
src/masphd/darwin/: __init__.py  client.py  decoder.py  extract_segments.py  listener.py  parse_forecasts.py  parse_schedules.py  realtime_filter.py  station_pairs.py  time_utils.py
src/masphd/features/: segment_features.py  time_features.py
src/masphd/hsp/: __init__.py  client.py  parser.py
src/masphd/io/: paths.py
src/masphd/models/: ensemble.py  transformers.py
src/masphd/runtime/: realtime_db.py  recent_cache.py  run_realtime_predict.py
src/masphd/utils/: model_utils.py  station_lookup.py
